--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: Build and Push Docker Image
 
 on:
-  push:
-    branches:
-      - main
+   
+  workflow_dispatch:
 
 jobs:
   build:
@@ -29,7 +28,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: yourusername/yourapp:latest
+        tags: khan14321/yourapp:latest
       env:
         DOCKER_BUILDKIT: 1
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
