--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,30 @@
-name: Build and Push Docker Image
+name: Build and Deploy Docker Image
 
 on:
-  push:
-    branches:
-      - main
-
+  workflow_dispatch:  # Allows manual trigger of the workflow
+    
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
+    - name: Build Docker image
+      run: |
+        docker build -t test-flask-app:latest .
 
-    - name: Login to Docker Hub
+    - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/yourapp:latest
+    - name: Push Docker image to Docker Hub
+      run: |
+        docker tag test-flask-app:latest ${{ secrets.DOCKER_USERNAME }}/test-flask-app:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/test-flask-app:latest
