--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.username }}
+        password: ${{ secrets.password }}
 
     - name: Build Docker image
       run: |
@@ -26,5 +26,5 @@ jobs:
 
     - name: Push Docker image to Docker Hub
       run: |
-        docker tag test-flask-app:latest ${{ secrets.DOCKER_USERNAME }}/test-flask-app:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/test-flask-app:latest
+        docker tag test-flask-app:latest ${{ secrets.username }}/test-flask-app:latest
+        docker push ${{ secrets.username }}/test-flask-app:latest
